updating file reading to read from ressources